# sorting-algorithm-rs

./: .gitignore  Cargo.toml  README.md  run_checks.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_workflow.yml  git-cliff.yml  lint.yml  security_audit.yml
src/: bubble.rs  insertion.rs  lib.rs  main.rs  merge.rs  quick.rs  selection.rs
